Removed the old bluetooth and wifi js files from settings/js Removed the old spinner code from settings.html Removed DNA_Weather/js/installedApps.js Removed DNA_RVITest directory, not needed anymore per Magnus Removed DNA_Weather/js/car.js Modified DNA_Weather's index, main.js, and css to exclude any ousted CSS rules.
Change-Id: I8702a532c1543bd1a7d08ae525c64aa930307268

--- a/css/weather.css
+++ b/css/weather.css
@@ -95,10 +95,19 @@ html {
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 1;
   overflow: hidden;
+  color: rgb(178, 240, 255);
+  font-size: 62px;  
+  line-height: 62px;
 }
 .currentDetails {
   line-height: 10px;
   padding-bottom: 20px;
+}
+.currentDetails > p {
+  color: #fff;
+  padding: 10px;
+  font-size: 24px;
+  line-height: 24px;
 }
 .condImage {
   margin-left: 10px;
@@ -214,9 +223,6 @@ sup {
   font-weight: bold;
   padding-top: 2px;
   font-size: .85em;
-}
-span.fontSizeSmall {
-  padding: 10px;
 }
 
 #locationModal{
