Updates weather with common-app changes per style guide
Change-Id: I3e2779b9f72c9221395612d9b7f690ce4d2c817d
Signed-off-by: Marco Morales <mmorale1@jaguarlandrover.com>

--- a/css/weather.css
+++ b/css/weather.css
@@ -301,13 +301,16 @@ li {
   align-items: flex-end;    
   justify-content: space-between;
 }
-#bottomBarLogoImg {
-  content:url('/images/accuweather_icon.png');
+
+#bbar-logo {
+  background-image:url('/images/accuweather_icon.png');
 }
+
 #app {
   flex-direction: column;
   border: 2px solid rgba(255,255,255, 0.5);
 }
+
 ul .settingElement {
   margin: 0 40px; 
 }
